Update hero images and configurations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,19 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    /* Path aliases */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@assets/*": ["src/assets/*"]
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "plugins"]
+  "include": ["src", "plugins"],
+  "exclude": ["node_modules"]
 }
